修改读取配置文件, 读取tag/input/output

--- a/src/main/resources/application-tags.yml
+++ b/src/main/resources/application-tags.yml
@@ -4,7 +4,7 @@ tags:
       - tag: add
         input: com.legion.client.api.sample.T.SampleMessage
         output: com.legion.client.api.sample.T.SampleMessage
-      - tags: query
+      - tag: query
         input: com.legion.client.api.sample.T.SampleMessage
         output: com.legion.client.api.sample.T.SampleMessage
     tsm:
