--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,7 +22,7 @@ management:
     web:
       base-path: /actuator
       exposure:
-        include: info
+        include: info,prometheus
 
 # logging
 logging:
