升级client版本，增加客户端拦截器功能

--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -6,7 +6,7 @@ spring:
   cloud:
     config:
       label: master
-      fail-fast: true
+      fail-fast: false # dev/test
       discovery:
         enabled: true
         service-id: zcs-config-manage
