--- a/pom.xml
+++ b/pom.xml
@@ -6,11 +6,11 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>2.1.3.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
     <groupId>com.zcs.legion.gateway</groupId>
     <artifactId>legion-gateway</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3</version>
     <name>legion-gateway</name>
     <description>zcsmart Legion Gateway</description>
 
