--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -34,11 +34,18 @@ eureka:
 
 # management
 management:
+  metrics:
+    export:
+      prometheus:
+        enabled: true
   endpoints:
     web:
-      base-path: /actuator
+      base-path: /exporter
       exposure:
-        include: info,health,refresh
+        include: prometheus
+    jmx:
+      exposure:
+        exclude: '*'
 
 # logging
 logging:
