修改日志级别

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -48,7 +48,7 @@ management:
 logging:
   path: logs
   level:
-    org.springframework: info
+    org.springframework: warn
     com.zcs.legion.gateway: info
     com.legion: info
 
