--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>com.zcs.boot</groupId>
             <artifactId>spring-boot-starter-legion-client</artifactId>
-            <version>[1.4.+,)</version>
+            <version>1.4.1.2</version>
             <optional>true</optional>
         </dependency>
         <dependency>
