--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,8 @@
         <dependency>
             <groupId>com.zcs.boot</groupId>
             <artifactId>spring-boot-starter-legion-client</artifactId>
-            <version>1.4.1.2</version>
-            <optional>true</optional>
+           <!-- <version>1.4.1.2</version>-->
+            <version>1.4.1.7-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
