--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
             <groupId>com.zcs.boot</groupId>
             <artifactId>spring-boot-starter-legion-client</artifactId>
             <!--<version>1.4.1.8-SNAPSHOT</version>-->
-            <version>1.4.1.2</version>
+            <version>1.4.1.9-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
