--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,7 @@
         <dependency>
             <groupId>com.zcs.boot</groupId>
             <artifactId>spring-boot-starter-legion-client</artifactId>
-            <!--<version>1.4.1.8-SNAPSHOT</version>-->
-            <version>1.4.1.9-SNAPSHOT</version>
+            <version>1.4.1.11</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
