增加混淆规则

--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
                         <option>-keepclassmembers class com.zcs.legion.gateway.config.GroupTag{*;}</option>
                         <option>-keep class com.zcs.legion.gateway.config.GroupTag$* {*;}</option>
                         <option>-keep public class * extends com.google.protobuf.GeneratedMessageV3 { *; }</option>
+                        <option>-keep class com.zcs.legion.api.A$* { *; }</option>
                         <option>-keep class com.zcs.legion.api.A$*$* { *; }</option>
 
                         <option>-keepclasseswithmembers public class * {
